--- a/package.json
+++ b/package.json
@@ -4,16 +4,23 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:p": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.2",
+    "@tanstack/react-query": "^5.90.16",
+    "axios": "^1.13.2",
+    "lucide-react": "^0.562.0",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.11",
+    "@tanstack/react-query-devtools": "^5.91.2",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
